# sei

./: .dockerignore  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  a  flake.nix  package.json  tsconfig.json  turbo.json
apps/api/: Cargo.toml  package.json
apps/api/src/: anime.rs  background.rs  consts.rs  helpers.rs  importer.rs  main.rs  mal.rs  queue.rs  types.rs
apps/api/src/anilist/: api_types.rs  mod.rs
apps/api/src/auth/: oauth.rs  session.rs
apps/api/src/importer/: mod.rs
apps/api/src/mal/: mod.rs
apps/api/src/middleware/: auth_guard.rs
apps/api/src/models/: anime.rs  anime_relations.rs  anime_users.rs  mod.rs  user.rs
apps/api/src/routes/: anime.rs  auth.rs  mal.rs  mod.rs  oauth.rs  user.rs
apps/web/: .eslintrc.js  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: app.tsx  env.mjs  index.css  index.tsx  routes.ts
apps/web/src/components/: anime-card.tsx  auth.tsx
apps/web/src/components/ui/: accordion.tsx  context-menu.tsx  timeline.tsx  toggle.tsx  tooltip.tsx
apps/web/src/hooks/: createUpdateListOrder.ts  useAnime.ts  useAnimeList.ts  useMalLogin.ts
apps/web/src/lib/: status.ts
apps/web/src/pages/: __root.tsx  home.tsx  login.tsx  view-anime.tsx
