[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sei"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["cookie-private", "cookie"] }
chrono = "0.4.33"
cuid = "1.3.2"
deadqueue = { version = "0.2.4", features = ["unlimited"] }
dotenvy = "0.15.7"
hex = "0.4.3"
lazy_static = "1.4.0"
oauth2 = { version = "4.4.2", features = ["pkce-plain"] } 
rand = { version = "0.8.5", features = ["std_rng"] }
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "mysql", "chrono" ] }
time = "0.3.34"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
